fix: fix chime recipe JEI preview.